# aisolver-bot

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  cloudflare-worker.js  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run.py  start.sh
app/agents/: base_agent.py  chemistry_agent.py  code_agent.py  explanation_agent.py  math_agent.py  orchestrator.py  physics_agent.py  prompts.py  validator_agent.py
app/api/: main.py  webhook.py
app/bot/: dispatcher.py
app/bot/filters/: admin.py
app/bot/handlers/: admin.py  history.py  image.py  payments.py  problem.py  profile.py  start.py
app/bot/keyboards/: admin.py  common.py
app/bot/middlewares/: throttling.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  ai_provider.py  provider_anthropic.py  provider_gemini.py  provider_openai.py  provider_openrouter.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/models/: __init__.py  conversation.py  request_log.py  subscription.py  uploaded_file.py  user.py
app/ocr/: pipeline.py  preprocessor.py  recognizer.py
app/payments/: manager.py
app/repositories/: base.py  user_repo.py
app/schemas/: requests.py
app/security/: rate_limiter.py
app/services/: memory.py
app/tests/: test_config.py
app/utils/: helpers.py  i18n.py  logger.py
app/workers/: tasks.py  worker.py
